+ Ajout d'une classe pour la barre d'options + Ajout d'une classe pour les pop-up de saisie de paramètres + Ajout d'une classe pour la gestion des pointeuses     * Créer et gérer une pointeuse     * Sauvegarder la configuration dans un fichier JSON     * Récupérer une configuration depuis un fichier JSON
# Documentation partielle
# Ajout d'images
# Ajout de la librairie GSON

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,13 @@
 *.zip
 *.tar.gz
 *.rar
+!lib/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Eclipse settings folder
+# Eclipse settings folder and content
 .settings/
+
+# Emulator settings and content
+.emu-settings/
